// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Default renders correctly 1`] = `
<jest>
  <article
    class="ecl-card"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <div
      class="ecl-card__body"
    >
      <ul
        class="ecl-card__label-container"
      >
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight ecl-card__label"
          >
            highlighted
          </span>
        </li>
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--medium ecl-card__label"
          >
            call status: upcoming
          </span>
        </li>
      </ul>
      <div
        class="ecl-card__meta"
      >
        Meta1 | Meta2
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Better regulation
        </a>
      </h1>
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <ul
        class="ecl-card__tag-container"
      >
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 1
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 2
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 3
          </a>
        </li>
      </ul>
    </div>
  </article>
</jest>
`;

exports[`Card Default renders correctly with extra attributes 1`] = `
<jest>
  <article
    class="ecl-card"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <div
      class="ecl-card__body"
    >
      <ul
        class="ecl-card__label-container"
      >
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight ecl-card__label"
          >
            highlighted
          </span>
        </li>
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--medium ecl-card__label"
          >
            call status: upcoming
          </span>
        </li>
      </ul>
      <div
        class="ecl-card__meta"
      >
        Meta1 | Meta2
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Better regulation
        </a>
      </h1>
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <ul
        class="ecl-card__tag-container"
      >
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 1
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 2
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 3
          </a>
        </li>
      </ul>
    </div>
  </article>
</jest>
`;

exports[`Card Default renders correctly with extra class names 1`] = `
<jest>
  <article
    class="ecl-card custom-class custom-class--test"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <div
      class="ecl-card__body"
    >
      <ul
        class="ecl-card__label-container"
      >
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight ecl-card__label"
          >
            highlighted
          </span>
        </li>
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--medium ecl-card__label"
          >
            call status: upcoming
          </span>
        </li>
      </ul>
      <div
        class="ecl-card__meta"
      >
        Meta1 | Meta2
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Better regulation
        </a>
      </h1>
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <ul
        class="ecl-card__tag-container"
      >
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 1
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 2
          </a>
        </li>
        <li
          class="ecl-card__tag-item"
        >
          <a
            class="ecl-tag ecl-card__tag"
            href="/example"
          >
            tag 3
          </a>
        </li>
      </ul>
    </div>
  </article>
</jest>
`;

exports[`Card Default renders correctly with lists 1`] = `
<jest>
  <article
    class="ecl-card"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <div
      class="ecl-card__body"
    >
      <ul
        class="ecl-card__label-container"
      >
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--highlight ecl-card__label"
          >
            highlighted
          </span>
        </li>
        <li
          class="ecl-card__label-item"
        >
          <span
            class="ecl-label ecl-label--medium ecl-card__label"
          >
            call status: upcoming
          </span>
        </li>
      </ul>
      <div
        class="ecl-card__meta"
      >
        Meta1 | Meta2
      </div>
      <h1
        class="ecl-card__title"
      >
        <a
          class="ecl-link ecl-link--standalone"
          href="/example"
        >
          Better regulation
        </a>
      </h1>
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__info-container"
      >
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#calendar"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            2018/10/22
          </span>
        </li>
        <li
          class="ecl-card__info-item"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#location"
            />
          </svg>
          <span
            class="ecl-card__info-label"
          >
            Luxembourg
          </span>
        </li>
      </ul>
      <dl
        class="ecl-description-list ecl-description-list--horizontal ecl-card__list"
      >
        <dt
          class="ecl-description-list__term"
        >
          EU contribution
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          1.000.000,00 euro (100% of the overall budget)
        </dd>
      </dl>
      <dl
        class="ecl-description-list ecl-description-list--taxonomy ecl-card__list"
      >
        <dt
          class="ecl-description-list__term"
        >
          Science areas
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Energy and transport
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Standards
          </span>
        </dd>
        <dt
          class="ecl-description-list__term"
        >
          Keywords
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Electricity
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Electromobility
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Energy
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Energy storage
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Security
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Transport
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Low carbon
          </span>
        </dd>
      </dl>
    </div>
  </article>
</jest>
`;

exports[`Card Tile renders correctly 1`] = `
<jest>
  <article
    class="ecl-card ecl-card--tile"
  >
    <div
      class="ecl-card__body"
    >
      <h1
        class="ecl-card__title"
      >
        Better regulation
      </h1>
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__link-container"
      >
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 1
          </a>
        </li>
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 2
          </a>
        </li>
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 3
          </a>
        </li>
      </ul>
    </div>
  </article>
</jest>
`;

exports[`Card Tile renders correctly with extra attributes 1`] = `
<jest>
  <article
    class="ecl-card ecl-card--tile"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-card__body"
    >
      <h1
        class="ecl-card__title"
      >
        Better regulation
      </h1>
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__link-container"
      >
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 1
          </a>
        </li>
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 2
          </a>
        </li>
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 3
          </a>
        </li>
      </ul>
    </div>
  </article>
</jest>
`;

exports[`Card Tile renders correctly with extra class names 1`] = `
<jest>
  <article
    class="ecl-card ecl-card--tile custom-class custom-class--test"
  >
    <div
      class="ecl-card__body"
    >
      <h1
        class="ecl-card__title"
      >
        Better regulation
      </h1>
      <div
        class="ecl-card__description"
      >
        Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
      </div>
      <ul
        class="ecl-card__link-container"
      >
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 1
          </a>
        </li>
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 2
          </a>
        </li>
        <li
          class="ecl-card__link-item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-card__link"
            href="/example"
          >
            link 3
          </a>
        </li>
      </ul>
    </div>
  </article>
</jest>
`;

exports[`Card Tile renders correctly with lists 1`] = `
<jest>
  <article
    class="ecl-card ecl-card--tile"
  >
    <div
      class="ecl-card__body"
    >
      <dl
        class="ecl-description-list ecl-description-list--horizontal ecl-card__list"
      >
        <dt
          class="ecl-description-list__term"
        >
          EU contribution
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          1.000.000,00 euro (100% of the overall budget)
        </dd>
      </dl>
      <dl
        class="ecl-description-list ecl-description-list--taxonomy ecl-card__list"
      >
        <dt
          class="ecl-description-list__term"
        >
          Science areas
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Energy and transport
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Standards
          </span>
        </dd>
        <dt
          class="ecl-description-list__term"
        >
          Keywords
        </dt>
        <dd
          class="ecl-description-list__definition"
        >
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Electricity
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Electromobility
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Energy
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Energy storage
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Security
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Transport
          </span>
          <span
            class="ecl-tag ecl-tag--display ecl-description-list__tag"
          >
            Low carbon
          </span>
        </dd>
      </dl>
    </div>
  </article>
</jest>
`;
